--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Bash</li>
             <li>Git</li>
         </ul>
-        <h3>Table met border</h3>
+        <h3>Work Experience</h3>
         <table>
         <thead><!-- Dit is de hoofding van de Table -->
             <tr>
@@ -47,6 +47,29 @@
         </tbody>
         <tfoot><!-- Hier geef je de info die in de footer moet staan -->
         </tfoot>
+        </table>
+        <h3>Skills</h3>
+        <table>
+            <table>
+                <tr><tr>
+                    <td>Python</td>
+                    <td>⭐⭐⭐⭐</td>
+                    </tr>
+                </tr>
+                <tr><tr>
+                    <td>Flutter</td>
+                    <td>⭐⭐⭐⭐</td>
+                    </tr>
+                </tr>
+            </table>
+            <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+            <td>Flutter</td>
+            <td>⭐⭐⭐⭐</td>
+            </tr>
         </table>
         <br>
         <hr>
