--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <li>Bash</li>
             <li>Git</li>
         </ul>
+        <hr>
         <h3>Work Experience</h3>
-        <table>
+        <table cellspacing="10">
         <thead><!-- Dit is de hoofding van de Table -->
             <tr>
             <th>Dates</th><!-- Dit is de hoofding data -->
@@ -48,27 +49,16 @@
         <tfoot><!-- Hier geef je de info die in de footer moet staan -->
         </tfoot>
         </table>
+        <hr>
         <h3>Skills</h3>
-        <table>
-            <table>
-                <tr><tr>
-                    <td>Python</td>
-                    <td>⭐⭐⭐⭐</td>
-                    </tr>
-                </tr>
-                <tr><tr>
-                    <td>Flutter</td>
-                    <td>⭐⭐⭐⭐</td>
-                    </tr>
-                </tr>
-            </table>
+        <table cellspacing="10"><!-- cellspacing van 10 pixels om de data een beetje meer ruimte te geven-->
             <tr>
-            <td>Python</td>
-            <td>⭐⭐⭐⭐</td>
+                <td>Python</td>
+                <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-            <td>Flutter</td>
-            <td>⭐⭐⭐⭐</td>
+                <td>Flutter</td>
+                <td>⭐⭐⭐</td>
             </tr>
         </table>
         <br>
