--- a/myContact.html
+++ b/myContact.html
@@ -25,8 +25,18 @@
         <ul>
             <li>christoph.kenens@gmail.com</li>
     </ul>
-    <br>
-    <hr>
-    <a href="index.html">Back</a>
+<br>
+<hr>
+<form action="mailto:christoph.kenens@basf.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" id=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" id=""><br>
+    <label>Your message:</label> <br>
+    <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+    <input type="submit" name="" id="">
+</form>
+<hr>
+<a href="index.html">Back</a>
 </body>
 </html>
