adding Style body and hr

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Christoph first website</title>
+        <!--Via deze manier kunnen we de HTML code op een eenvoudige manier stylen en eventueel aanpassen -->
+        <style>  
+            body {
+                background-color: blue;
+            }
+
+            hr {
+                background-color:red;
+            }
+        </style>
     </head>
-    <body>
+    <body >
         <table cellspacing="20">
             <tr>
                 <td>
