Adding css style hr

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             }
 
             hr {
-                background-color:red;
+                border-style:dotted none none;
+                width: 30%;
+                height: 0;
             }
         </style>
     </head>
