--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
             }
 
             hr {
-                border-style:dotted none none;
-                width: 30%;
-                height: 0;
+                border-style:none;
+                border-top-style: dotted;
+                width: 5%;
+                border-color: white;
+                border-width: 5px;
             }
         </style>
     </head>
