--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Christoph first website</title>
-        <!--Via deze manier kunnen we de HTML code op een eenvoudige manier stylen en eventueel aanpassen -->
-        <style>  
-            body {
-                background-color: blue;
-            }
-
-            hr {
-                border-style:none;
-                border-top-style: dotted;
-                width: 5%;
-                border-color: white;
-                border-width: 5px;
-            }
-        </style>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body >
         <table cellspacing="20">
